<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<PreferenceCategory android:title="@string/pref_credentials_profile" >
		<EditTextPreference
				android:title="@string/pref_user_name"
				android:summary="@string/pref_user_name_summary"
				android:key="prefUsername"/>
		<EditTextPreference
			android:title="@string/pref_password"
			android:summary="@string/pref_password_summary"
			android:key="prefPassword"
			android:inputType="textPassword" />
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/pref_cam_profile" >
		<EditTextPreference 
			android:title="@string/pref_cam_url"
			android:summary="@string/pref_cam_url_summary"
			android:key="prefCamURL" />
		<CheckBoxPreference
			android:title="@string/pref_cam_https"
			android:defaultValue="false"
			android:summary="@string/pref_cam_https_summary"
			android:key="prefCamHTTPS" />
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/pref_general_settings_profile" >
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="prefSaveToGallery"
			android:summary="@string/pref_save_image_summary"
			android:title="@string/pref_save_image" >
		</CheckBoxPreference>
		
		<ListPreference
			android:key="prefSyncFrequency"
			android:entries="@array/syncFrequency"
			android:summary="@string/pref_sync_frequency_summary"
			android:entryValues="@array/syncFrequencyValues"
			android:title="@string/pref_sync_frequency" />
	</PreferenceCategory>
</PreferenceScreen>